--- a/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
+++ b/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
@@ -129,7 +129,7 @@
     <Compile Include="Util\HttpUtil.cs" />
     <Compile Include="Util\ImageInfo.cs" />
     <Compile Include="Util\Pixiv.cs" />
-    <Compile Include="Util\pixivLike.cs" />
+    <Compile Include="Util\PixivLike.cs" />
     <Compile Include="Util\PixivTop50.cs" />
     <Compile Include="Util\ToastManagement.cs" />
     <Compile Include="Util\WebViewLogin.cs" />
@@ -189,7 +189,7 @@
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="PixivCS">
-      <Version>0.5.10</Version>
+      <Version>0.5.11</Version>
     </PackageReference>
     <PackageReference Include="QueryString.NET">
       <Version>1.0.0</Version>
