添加了书签与已关注画师的插画集合;修改原pixiv like名字为pixiv recommendation并优化了逻辑

--- a/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
+++ b/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
@@ -114,6 +114,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Collection\PixivBookmark.cs" />
+    <Compile Include="Collection\PixivFollowingIllust.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -130,7 +132,7 @@
     <Compile Include="Model\ImageInfo.cs" />
     <Compile Include="ViewModel\ImageShowViewModel.cs" />
     <Compile Include="Util\Pixiv.cs" />
-    <Compile Include="Collection\PixivLike.cs" />
+    <Compile Include="Collection\PixivRecommendation.cs" />
     <Compile Include="Collection\PixivTop50.cs" />
     <Compile Include="Util\ToastMessage.cs" />
     <Compile Include="Util\WebViewLogin.cs" />
