--- a/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
+++ b/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
@@ -116,6 +116,9 @@
     </Compile>
     <Compile Include="Collection\PixivBookmark.cs" />
     <Compile Include="Collection\PixivFollowingIllust.cs" />
+    <Compile Include="LoginPage.xaml.cs">
+      <DependentUpon>LoginPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -129,11 +132,11 @@
     <Compile Include="Model\Conf.cs" />
     <Compile Include="Util\DownloadManager.cs" />
     <Compile Include="Model\ImageInfo.cs" />
-    <Compile Include="Util\PixivCSBaseModify.cs" />
     <Compile Include="ViewModel\ImageShowViewModel.cs" />
     <Compile Include="Util\Pixiv.cs" />
     <Compile Include="Collection\PixivRecommendation.cs" />
     <Compile Include="Util\ToastMessage.cs" />
+    <Compile Include="Util\WebViewLogin.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -166,6 +169,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="LoginPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -190,7 +197,7 @@
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="PixivCS">
-      <Version>0.5.12</Version>
+      <Version>0.7.1-dev</Version>
     </PackageReference>
     <PackageReference Include="QueryString.NET">
       <Version>1.0.0</Version>
