--- a/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
+++ b/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
@@ -21,7 +21,7 @@
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
     <PackageCertificateThumbprint>1ADD1EEC0A31238767611CCC03E9E4A33483BA14</PackageCertificateThumbprint>
-    <AppxPackageDir>E:\Visual Studio Works\</AppxPackageDir>
+    <AppxPackageDir>E:\Visual_Studio_Works\</AppxPackageDir>
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
     <AppInstallerUpdateFrequency>0</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
@@ -200,7 +200,7 @@
       <Version>0.7.6-dev</Version>
     </PackageReference>
     <PackageReference Include="PixivCS_Alter">
-      <Version>0.8.1-dev</Version>
+      <Version>0.8.4-dev</Version>
     </PackageReference>
     <PackageReference Include="QueryString.NET">
       <Version>1.0.0</Version>
