添加排行榜模式；修改UI

--- a/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
+++ b/Pixiv_Wallpaper_for_Windows_10/Pixiv_Wallpaper_for_Windows_10.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="Collection\PixivBookmark.cs" />
     <Compile Include="Collection\PixivFollowingIllust.cs" />
+    <Compile Include="Collection\PixivRanking.cs" />
     <Compile Include="LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
